--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "lucide-react": "^0.563.0",
     "mongoose": "^9.2.0",
     "motion": "^12.34.0",
